publicamos el video

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: "This blog is about some exercises related to robotics movile"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://Jorgebs2022.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  Jorgebs2022
 
 # Build settings
 theme: minima
